[package]
name = "thatrustyos"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic="abort"

[profile.release]
panic="abort"

[build]
target = "x86_64-rustyos.json"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"