[package]
name = "thatrustyos"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"

[unstable]
builtin-std-features = ["compiler-buildins-mem"]
build-std = ["core", "compiler_builtins"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
